update admin payment report